tests/baselines/reference/typeParameterAsTypeParameterConstraint2.errors.txt
tests/cases/conformance/types/typeParameters/typeArgumentLists/typeParameterAsTypeParameterConstraint2.ts(6,8): error TS2345: Argument of type '""' is not assignable to parameter of type '数字'.
tests/cases/conformance/types/typeParameters/typeArgumentLists/typeParameterAsTypeParameterConstraint2.ts(7,8): error TS2345: Argument of type '{}' is not assignable to parameter of type '数字'.
tests/cases/conformance/types/typeParameters/typeArgumentLists/typeParameterAsTypeParameterConstraint2.ts(13,17): error TS2345: Argument of type 'NumberVariant' is not assignable to parameter of type '数字'.
tests/cases/conformance/types/typeParameters/typeArgumentLists/typeParameterAsTypeParameterConstraint2.ts(16,9): error TS2345: Argument of type '{ length: 文字; }' is not assignable to parameter of type '{ length: 数字; }'.
  Types of property 'length' are incompatible.
    Type '文字' is not assignable to type '数字'.
tests/cases/conformance/types/typeParameters/typeArgumentLists/typeParameterAsTypeParameterConstraint2.ts(17,9): error TS2345: Argument of type '{ length: {}; }' is not assignable to parameter of type '{ length: 数字; }'.
  Types of property 'length' are incompatible.
    Type '{}' is not assignable to type '数字'.
tests/cases/conformance/types/typeParameters/typeArgumentLists/typeParameterAsTypeParameterConstraint2.ts(18,10): error TS2345: Argument of type '文字[]' is not assignable to parameter of type '{ length: 任意[]; }'.
  Types of property 'length' are incompatible.
    Type '数字' is not assignable to type '任意[]'.


==== tests/cases/conformance/types/typeParameters/typeArgumentLists/typeParameterAsTypeParameterConstraint2.ts (6 errors) ====
    // using a type parameter as a constraint for a type parameter is invalid
    // these should be errors unless otherwise noted
    
    function foo<T, U extends T>(x: T, y: U): U { return y; } // this is now an error
    
    foo(1, '');
           ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type '数字'.
    foo(1, {});
           ~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type '数字'.
    
    interface NumberVariant extends Number {
        x: number;
    }
    var n: NumberVariant;
    var r3 = foo(1, n);
                    ~
!!! error TS2345: Argument of type 'NumberVariant' is not assignable to parameter of type '数字'.
    
    function foo2<T, U extends { length: T }>(x: T, y: U) { return y; } // this is now an error
    foo2(1, { length: '' });
            ~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ length: 文字; }' is not assignable to parameter of type '{ length: 数字; }'.
!!! error TS2345:   Types of property 'length' are incompatible.
!!! error TS2345:     Type '文字' is not assignable to type '数字'.
    foo2(1, { length: {} });
            ~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ length: {}; }' is not assignable to parameter of type '{ length: 数字; }'.
!!! error TS2345:   Types of property 'length' are incompatible.
!!! error TS2345:     Type '{}' is not assignable to type '数字'.
    foo2([], ['']);
             ~~~~
!!! error TS2345: Argument of type '文字[]' is not assignable to parameter of type '{ length: 任意[]; }'.
!!! error TS2345:   Types of property 'length' are incompatible.
!!! error TS2345:     Type '数字' is not assignable to type '任意[]'.